2013-01-31  Gregory Soyez  <soyez@fastjet.fr>

	* configure:
	* README:
	used --fastjet-config=... rather than --fjconfig=... to specify
	the 'fastjet-config' file to use

	* scripts/update-contribs.sh:
	* scripts/internal/common.sh:
	allowed to run
	  update-contribs.sh --force
	which will answer yes to all "yesno" questions asked

	* VERSION:          *** ADDED ***
	added a VERSION file

	* scripts/internal/switch-to-version.sh:
	* scripts/register-new-contrib.sh:
	* scripts/new-contrib-from-template.sh:
	* scripts/release-contrib.sh:
	removed potential trailing /


2013-01-31  Gavin Salam  <gavin.salam@cern.ch> + Gregory

	* DEVEL-GUIDELINES:  *** ADDED ***
	* README
	tried to make these a little more compact.

2013-01-31  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/make-release.sh -> scripts/release-contrib.sh:
	renamed for more consistency

	* scripts/internal/switch-to-version.sh:
	if the version starts with a digit, prefix it by "tags/"

	* scripts/internal/install-sh:
	added a script for installing files

	* scripts/make-release.sh:
	checked the full list of mandatory files when making a release

2013-01-31  Gavin Salam  <gavin.salam@cern.ch>

	* scripts/update-contribs.sh: 
	added -h option to update-contribs.sh

2013-01-31  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/update-contribs.sh:
	if the svn up updated the update-contribs.sh script, re-run with
	the new version

	* AUTHORS:                   *** ADDED ***
	* COPYING:                   *** ADDED ***
	* scripts.internal/Template/COPYING:
	put this under GPLv2 and added the list of people maintaining the
	FastJet-contrib

	* README:
	mentioned new-contrib-from-template.sh instead of
	new-contrib-template.sh

	* scripts/internal/check.sh:
	checked that the expected output contains more than comments and
	empty lines

2013-01-31  Gavin SALAM  <gavin.salam@cern.ch> + Matteo + Gregory

	* scripts/internal/Template/example.ref *** ADDED ***
	added a template reference output file for make check with