@@ -1,5 +1,9 @@
 2013-01-31  Gregory Soyez  <soyez@fastjet.fr>
 
+	* scripts/internal/release-fjcontrib.sh:
+	added a script to release fj-contrib
+	it includes all the contrib in contribs.svn
+
 	* configure:
 	* README:
 	used --fastjet-config=... rather than --fjconfig=... to specify
